# decode

./: .gitignore  Cargo.toml  README.md
apidoc/: coordinator.yaml  node-server.yml
client/: Cargo.toml
client/src/: main.rs
coord/: .env  .gitignore  README.md  app.py  config.toml  requirements.txt
coord/config/: config.exs  dev.exs  prod.exs  runtime.exs
coord/lib/: decode_coord.ex  decode_coord_web.ex  registry_ex.ex  registry_test.exs
coord/lib/decode_coord/: .node.ex.swp  .shard.ex.swp  mailer.ex  node.ex  node_rank.ex  objects.ex  repo.ex  shard.ex
coord/lib/decode_coord/objects/: chunk.ex  shard.ex
coord/lib/decode_coord_web/: gettext.ex  router.ex  telemetry.ex
coord/lib/decode_coord_web/controllers/: fallback_controller.ex  object_controller.ex  page_controller.ex
coord/lib/decode_coord_web/views/: changeset_view.ex  error_helpers.ex  node_view.ex  page_view.ex
coord/migrations/versions/: 8777cd6a82d6_.py  aad9e507ce26_.py  b16001c3cc37_.py  d9e216be35fd_.py
coord/models/: objects.py
coord/priv/repo/migrations/: 20221201023936_base.exs
coord/test/decode_coord_web/controllers/: page_controller_test.exs
coord/test/decode_coord_web/views/: layout_view_test.exs  page_view_test.exs
coord/test/support/: conn_case.ex  data_case.ex
decode-rs/: Cargo.toml
decode-rs/src/: async_reed_solomon.rs  lib.rs  transposed_slices.rs
decode-rs/src/api/: coord.rs  mod.rs  node.rs
decode-rs/src/api_client/: coord.rs  mod.rs  node.rs
elixir-coord/: README.md  mix.exs
elixir-coord/config/: config.exs  dev.exs  prod.exs  test.exs
elixir-coord/lib/decode_coord/: application.ex  node.ex  node_metrics.ex  node_rank.ex  shard.ex
elixir-coord/lib/decode_coord/objects/: chunk.ex  object.ex
elixir-coord/lib/decode_coord_web/: endpoint.ex  router.ex
elixir-coord/lib/decode_coord_web/controllers/: api_fallback_controller.ex  node_controller.ex  object_controller.ex
elixir-coord/lib/decode_coord_web/views/: error_view.ex  layout_view.ex  object_view.ex
elixir-coord/priv/repo/: seeds.exs
elixir-coord/test/: test_helper.exs
elixir-coord/test/decode_coord_web/controllers/: node_controller_test.exs
emulab-ansible/: .gitignore  all.yml  inventory.yaml
node-server/: .gitignore  Cargo.toml  DecodeNode.example.toml
node-server/src/: config.rs  error.rs  main.rs  pipe_through_hasher.rs  shard_store.rs
(+8 files in other folders)
