[package]
name = "decode-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
decode-rs = { path = "../decode-rs" }
exitcode = "1.1.2"
futures = "0.3.25"
log = "0.4.17"
reed-solomon-erasure = { version = "6.0.0", features = ["simd-accel"] }
reqwest = { version = "0.11.12", features = ["stream"] }
simple_logger = "4.0.0"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = "0.7.4"

