[package]
name = "decode-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.17" }
reqwest = { version = "0.11.12", features = ["json", "stream"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0" }
tokio = "1.21.2"
tokio-util = "0.7.4"
uuid = { version = "0.8", features = [ "serde" ] }
